[gd_scene load_steps=10 format=3 uid="uid://osik8dchik80"]

[ext_resource type="Script" path="res://scripts/enemies/caterpillar.gd" id="1_4w0wg"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_hwfrl"]
[ext_resource type="PackedScene" uid="uid://dm4bvgwdxeult" path="res://assets/enemies/crawling_enemy/crawling_enemy_1.aseprite" id="2_s25m3"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/walking.gd" id="4_jh165"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/dead.gd" id="5_2i1e1"]
[ext_resource type="PackedScene" uid="uid://db8algl6onq53" path="res://scenes/components/health_component.tscn" id="6_0gs7y"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/idle.gd" id="7_y1dam"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wknqq"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_an6g2"]
size = Vector2(10, 3)

[node name="Caterpillar" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "left_ledge_detector", "right_ledge_detector") groups=["Enemy", "Moving"]]
collision_layer = 8
script = ExtResource("1_4w0wg")
move_length = 0
health_component = NodePath("HealthComponent")
left_ledge_detector = NodePath("LeftLedgeDetector")
right_ledge_detector = NodePath("RightLedgeDetector")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("2_s25m3")]
animation = &"Walking"
frame = 2
frame_progress = 0.712143
speed_scale = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wknqq")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_an6g2")

[node name="LeftLedgeDetector" type="RayCast2D" parent="."]
position = Vector2(-9, 0)

[node name="RightLedgeDetector" type="RayCast2D" parent="."]
position = Vector2(9, 0)

[node name="IdleTimer" type="Timer" parent="."]

[node name="MovingTimer" type="Timer" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("6_0gs7y")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_hwfrl")
state_type = "Enemy"
initial_state = NodePath("Walking")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_y1dam")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("4_jh165")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("5_2i1e1")

[connection signal="body_entered" from="HitBox" to="StateMachine/Walking" method="_on_hit_box_body_entered"]
